--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 requests = "^2.32.5"
 psycopg2 = "^2.9.10"
+types-psycopg2 = "^2.9.21.20250915"
 
 
 [tool.poetry.group.lint.dependencies]
@@ -21,6 +22,7 @@ isort = "^6.0.1"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.2"
 pytest-cov = "^7.0.0"
+types-requests = "^2.32.4.20250913"
 
 [build-system]
 requires = ["poetry-core"]
